# chat-server

./: .gitignore  CMakeLists.txt  PROJECT_PLAN.md  ban_list.json  benchmark.sh  build_all.sh  mingw-toolchain.cmake  plan-slide.md  test_config.json  vcs_chat.db  vcs_chat.db-shm  vcs_chat.db-wal  week_01_core_foundation.md  week_02_security_core.md  week_03_advanced_features.md  week_04_hardening_ops.md
artifact/week1/: Builder.cpp  Builder.h  ClientSession.cpp  ClientSession.h  CommandHandler.cpp  CommandHandler.h  CommandParser.cpp  CommandParser.h  Config.cpp  Config.h  ConnectionManager.cpp  ConnectionManager.h  Constants.h  Database.cpp  Database.h  ErrorCodes.h  EventLoop.cpp  EventLoop.h  Logger.cpp  MessageQueue.cpp  MessageQueue.h  Packet.cpp  Packet.h  Parser.cpp  Parser.h  Protocol.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  ThreadPool.cpp  ThreadPool.h  main.cpp
artifact/week2/: AuthManager.cpp  AuthManager.h  CMakeLists.txt  CertVerifier.cpp  CertVerifier.h  ClientCrypto.cpp  ClientCrypto.h  CryptoEngine.cpp  CryptoEngine.h  KeyExchange.cpp  KeyExchange.h  PacketCrypto.h  SessionToken.cpp  SessionToken.h  aes.cpp  aes.h  hmac.cpp  hmac.h  random.cpp  random.h  rsa.cpp  rsa.h  sha256.cpp  sha256.h  test_crypto.cpp
artifact/week3/: AdminCommands.cpp  AdminCommands.h  ChatHistory.cpp  ChatHistory.h  ClientSession.cpp  Constants.h  FileTransfer.cpp  FileTransfer.h  MessageFilter.h  Protocol.h  Room.h  RoomManager.cpp  RoomManager.h  TcpServer.cpp  main.cpp
artifact/week4/: EventLoop.cpp  IntrusionDetector.h  PROTOCOL_SPEC.md  RateLimiter.cpp  RateLimiter.h  SECURITY_DESIGN.md  TcpServer.cpp  build.sh  main.cpp  run_client.sh  run_server.sh  test_auth.cpp  test_framework.h  test_ratelimit.cpp
baocao/: Bia.tex  Danh_sach_tai_lieu_tham_khao.bib  Tu_viet_tat.tex  baocao.aux  baocao.bcf  baocao.blg  baocao.fdb_latexmk  baocao.fls  baocao.lof  baocao.lot  baocao.out  baocao.run.xml  baocao.tex  baocao.toc  baocao.xdv  build_log.txt  check_pdf.py  fix_bold_headers.py  fix_tables.py  lstlisting.tex  update_structure.sh
baocao/Chuong/: Tom_tat.tex
baocao/Chuong/1_Mo_dau/: 1.1.tex  chuong1.aux  chuong1.tex
baocao/Chuong/1_Mo_dau/1.2/: 1.2.1.tex  1.2.2.tex  1.2.tex
baocao/Chuong/2_Nen_tang_ly_thuyet/: 2.3.tex  2.6.tex  chuong2.aux  chuong2.tex
baocao/Chuong/2_Nen_tang_ly_thuyet/2.1/: 2.1.1.tex  2.1.2.tex  2.1.tex
baocao/Chuong/2_Nen_tang_ly_thuyet/2.2/: 2.2.1.tex  2.2.2.tex  2.2.3.tex  2.2.tex
baocao/Chuong/2_Nen_tang_ly_thuyet/2.3/: 2.3.1.tex  2.3.2.tex  2.3.tex
baocao/Chuong/2_Nen_tang_ly_thuyet/2.4/: 2.4.1.tex  2.4.2.tex  2.4.tex
baocao/Chuong/2_Nen_tang_ly_thuyet/2.5/: 2.5.1.tex  2.5.2.tex  2.5.tex
baocao/Chuong/2_Phan_tich_thiet_ke/: 2.1.tex  2.2.tex  2.3.tex  2.4.tex  2.5.tex  2.6.tex  chuong2.aux  chuong2.tex
baocao/Chuong/3_Phan_tich_thiet_ke/: chuong3.aux  chuong3.tex
baocao/Chuong/3_Phan_tich_thiet_ke/3.1/: 3.1.1.tex  3.1.tex
baocao/Chuong/3_Phan_tich_thiet_ke/3.2/: 3.2.1.tex  3.2.tex
baocao/Chuong/3_Phan_tich_thiet_ke/3.3/: 3.3.2.tex  3.3.tex
baocao/Chuong/3_Phan_tich_thiet_ke/3.4/: 3.4.1.tex  3.4.2.tex  3.4.3.tex  3.4.tex
baocao/Chuong/3_Phan_tich_thiet_ke/3.5/: 3.5.1.tex  3.5.2.tex  3.5.tex
baocao/Chuong/3_Phan_tich_thiet_ke/3.6/: 3.6.1.tex  3.6.3.tex  3.6.4.tex  3.6.tex
baocao/Chuong/3_Phan_tich_thiet_ke/3.7/: 3.7.2.tex  3.7.3.tex  3.7.tex
baocao/Chuong/3_Trien_khai_danh_gia/: 3.1.tex  3.2.tex  3.3.tex  chuong3.aux  chuong3.tex
baocao/Chuong/4_Ket_luan/: 4.1.tex  4.2.tex  chuong4.aux  chuong4.tex
baocao/Chuong/Chuong1/: chuong1.aux  chuong1.tex
baocao/Chuong/Chuong1/1.2/: 1.2.1.tex  1.2.2.tex  1.2.tex
baocao/Chuong/Chuong2/: chuong2.aux  chuong2.tex
baocao/Chuong/Chuong2/2.1/: 2.1.2.tex  2.1.tex
baocao/Chuong/Chuong2/2.2/: 2.2.1.tex  2.2.tex
baocao/Chuong/Chuong3/: chuong3.aux  chuong3.tex
baocao/Chuong/Chuong3/3.1/: 3.1.2.tex  3.1.tex
baocao/Chuong/Chuong3/3.2/: 3.2.2.tex  3.2.tex
baocao/Chuong/Chuong3/3.3/: 3.3.1.tex  3.3.2.tex  3.3.tex
baocao/Chuong/Chuong3/3.4/: 3.4.tex
baocao/Chuong/Chuong4/: chuong4.aux  chuong4.tex
baocao/Hinhve/: hinh_1.1_sample.puml  hinh_2.1.puml
client/: main.cpp
client/commands/: CommandHandler.cpp  CommandHandler.h  CommandParser.cpp  CommandParser.h
client/core/: ConnectionManager.cpp  ConnectionManager.h  MessageQueue.cpp  MessageQueue.h  TcpClient.cpp  TcpClient.h  WinConsole.cpp  WinConsole.h
client/security/: CertVerifier.cpp  CertVerifier.h  ClientCrypto.cpp  ClientCrypto.h
common/: Constants.h  ErrorCodes.h  MessageTypes.h  Protocol.h
crypto/: aes.cpp  aes.h  hmac.cpp  hmac.h  random.cpp  random.h  rsa.cpp  rsa.h  sha256.cpp  sha256.h
docs/: API_COMMANDS.md  THREAT_MODEL.md  client.md  server.md  user.md
plan/: week_01_core_foundation.md  week_02_security_core.md  week_03_advanced_features.md  week_04_hardening_ops.md
scripts/: benchmark.sh  build_windows_deps.sh  run_client.sh  run_server.sh  security_check.sh
server/: main.cpp  server_config.json
server/core/: ClientSession.cpp  ClientSession.h  EventLoop.cpp  EventLoop.h  TcpServer.cpp  TcpServer.h  ThreadPool.cpp  ThreadPool.h
server/features/: AdminCommands.cpp  AdminCommands.h  FileTransfer.cpp  FileTransfer.h  MessageFilter.cpp  MessageFilter.h
server/protocol/: Builder.cpp  Builder.h  Packet.cpp  Packet.h  Parser.cpp  Parser.h
server/rooms/: ChatHistory.cpp  ChatHistory.h  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h
server/security/: AuditLogger.cpp  AuditLogger.h  AuthManager.cpp  AuthManager.h  CryptoEngine.cpp  CryptoEngine.h  IntrusionDetector.cpp  IntrusionDetector.h  KeyExchange.cpp  KeyExchange.h  RateLimiter.cpp  RateLimiter.h  SessionToken.cpp  SessionToken.h
server/utils/: Config.cpp  Config.h  Database.cpp  Database.h  Logger.cpp  Logger.h
tests/: TestMacro.h  ban_list.json  benchmark_load.cpp  integration_test.py  test_auth.cpp  test_auth_manager.cpp  test_comprehensive.py  test_config.json  test_crypto.cpp  test_protocol.cpp  test_ratelimit.cpp  test_room_memory.py  test_week3.py  token.txt  vcs_chat.db  vcs_client
